src/objects/Coop_Activity_type_to_POP__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Coop Activity type to POP mapping</description>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>POP1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>POP1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>POP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>POP</label>
        <type>TextArea</type>
    </fields>
    <label>Coop Activity type to POP</label>
</CustomObject>